--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="left">
                          <div class="about-container">
                               <h3 class="title">About</h3>
-                              <p class="text">• Artificial intelligence •</p>
+                              <p class="text">• Architect •</p>
                               <p class="text">• Python | C++ | Html/Css/Js •</p>
                          </div>
                          <div class="icons-container">
